Created pages and implemented CSS across site.

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,6 +1,6 @@
 .home {
     width: 100%;
-    height: 120vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: left;
@@ -12,7 +12,7 @@
   
   .headerContainer {
     width: auto;
-    margin-left: 50px;
+    margin: 100px;
   }
 
   .headerContainer p {
@@ -24,19 +24,20 @@
   .headerContainer button {
     color: black;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
     justify-content: center;
-    background-color: white;
+    background-color: #40A674;
     height: 50px;
     width: 180px;
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 20px;
   }
 
   .headerContainer button:hover {
-    background-color: #07090a;
+    background-color: white;
+    color: #40A674;
     cursor: pointer;
     transition: 0.3s ease-in;
   }
