--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,6 +1,6 @@
 .about {
     width: 100%;
-    height: 120vh;
+    height: 130vh;
     display: flex;
     flex-direction: column;
   }
@@ -8,10 +8,8 @@
   .aboutBottom {
     display: flex;
     flex-direction: column;
-    height: 55%;
     align-items: center;
     margin-top: 30px;
-    margin-bottom: 30px;
   }
 
   .aboutBottom p {
@@ -26,8 +24,31 @@
   }
   .aboutTop {
     width: 100%;
-    height: 45%;
+    height: 35%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  .logoSmall {
+    width: 150px;
+  }
+
+
+  @media only screen and (max-width: 707px) {
+  .about {
+      width: 100%;
+      height: 170vh;
+  }
+
+  .aboutBottom p {
+    width: 315px;
+  }
+
+  .aboutBottom h3 {
+    width: 315px;
+  }
+  .aboutBottom ul {
+    width: 315px;
+  }
+}
