--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -16,7 +16,6 @@
   }
 
   .headerContainer p {
-    padding: 0;
     font-size: 40px;
     color: white;
   }
@@ -41,3 +40,13 @@
     cursor: pointer;
     transition: 0.3s ease-in;
   }
+
+  
+  @media only screen and (max-width: 900px) {
+    .headerContainer p {
+      font-size: 30px;
+    }
+    .headerContainer {
+      margin: 40px;
+    }
+  };
