--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,6 +1,6 @@
 .about {
     width: 100%;
-    height: 130vh;
+    height: 50%;
     display: flex;
     flex-direction: column;
   }
@@ -10,6 +10,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 30px;
+    margin-bottom: 30px;
   }
 
   .aboutBottom p {
@@ -19,12 +20,14 @@
   .aboutBottom h3 {
     width: 1200px;
   }
+
   .aboutBottom ul {
     width: 1200px;
   }
+  
   .aboutTop {
     width: 100%;
-    height: 35%;
+    height: 350px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -33,7 +36,6 @@
   .logoSmall {
     width: 150px;
   }
-
 
   @media only screen and (max-width: 707px) {
   .about {
@@ -48,6 +50,7 @@
   .aboutBottom h3 {
     width: 315px;
   }
+
   .aboutBottom ul {
     width: 315px;
   }
