--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -24,6 +24,11 @@
     margin-left: 30px;
     margin-bottom: 0px;
   }
+
+  .contact .rightSide p {
+    margin-left: 30px;
+    margin-bottom: 0px;
+  }
   
   form {
     display: flex;
@@ -81,10 +86,12 @@
 
     .contact{
       display:grid;
-      height: 80vh;
+      height: 100vh;
+
     }
     .contact .leftSide {
-      height: 160px;
+      height: 250px;
+      background-position: top;
     }
   };
 
