--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     width: 100%;
     height: 100px;
-    background-color: white;
+    background-color: #40A674;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,10 +10,11 @@
   }
 
   .footer p {
-    color: black;
+    color: white;
   }
 
   .socialMedia svg {
     font-size: 50px;
     cursor: pointer;
+    color: white;
   }
