--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     width: 100%;
     height: 150px;
-    background-color: white;
+    background-color: #40A674;
     display: flex;
     flex-direction: row;
   }
@@ -11,6 +11,7 @@
     height: 100%;
     display: flex;
     align-items: center;
+    color: white;
   }
   
   .navbar .leftSide img {
@@ -26,7 +27,7 @@
   }
   
   .navbar a {
-    color: black;
+    color: white;
     text-decoration: none;
     margin: 50px;
   }
@@ -34,7 +35,7 @@
   .navbar .rightSide button {
     background-color: transparent;
     border: none;
-    color: black;
+    color: white;
     cursor: pointer;
   }
   
@@ -54,7 +55,7 @@
     width: 50px;
   }
 
-  .navbar #open h2 {
+  .navbar #open h1 {
     display: none;
   }
   
