--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -27,7 +27,7 @@
   
   .aboutTop {
     width: 100%;
-    height: 350px;
+    height: 400px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -37,10 +37,29 @@
     width: 150px;
   }
 
-  @media only screen and (max-width: 707px) {
+  @media only screen and (max-width: 900px) {
+    .about {
+        width: 100%;
+        height: 120vh;
+    }
+  
+    .aboutBottom p {
+      width: 600px;
+    }
+  
+    .aboutBottom h3 {
+      width: 600px;
+    }
+  
+    .aboutBottom ul {
+      width: 600px;
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
   .about {
       width: 100%;
-      height: 170vh;
+      height: 160vh;
   }
 
   .aboutBottom p {
