--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 10px;
-    margin-bottom: 50px;
+    margin-bottom: 70px;
   }
 
   .aboutBottom p {
@@ -40,7 +40,7 @@
   @media only screen and (max-width: 900px) {
     .about {
         width: 100%;
-        height: 120vh;
+        height: auto;
     }
   
     .aboutBottom p {
@@ -59,7 +59,11 @@
   @media only screen and (max-width: 600px) {
   .about {
       width: 100%;
-      height: 160vh;
+      height: auto;
+  }
+
+  .aboutTop {
+    height: 260px;
   }
 
   .aboutBottom p {
