--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,11 +1,10 @@
 .contact {
     width: 100%;
-    height: 70vh;
+    height: 90vh;
     display: flex;
   }
   
   .contact .leftSide {
-    height: 100%;
     flex: 50%;
     background-position: center;
     background-repeat: no-repeat;
@@ -13,7 +12,6 @@
   }
   
   .contact .rightSide {
-    height: 100%;
     flex: 50%;
     display: flex;
     flex-direction: column;
@@ -82,16 +80,20 @@
     cursor: pointer;
   }
 
-  @media only screen and (max-width: 1000px) {
+  @media only screen and (max-width: 1200px) {
 
     .contact{
       display:grid;
       height: 100vh;
     }
     .contact .leftSide {
-      height: 250px;
+      height: 300px;
       background-position: top;
     }
+    .contact .rightSide {
+      justify-content:flex-start;
+    }
   };
+
 
 
