--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -6,3 +6,13 @@
 .galleryblurb {
     margin-left: 25px;
 }
+
+@media screen and (max-width: 850px) {
+    .galleryTitle {
+       text-align: center;
+    }
+    .galleryblurb {
+        text-align: center;
+    }
+}
+    
