--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -11,10 +11,12 @@
     .galleryTitle {
        text-align: center;
        margin-left: 0;
+       
     }
     .galleryblurb {
         text-align: center;
         margin-left: 0;
+        padding: 5px;
     }
 }
     
